# money-hack

./: README.md
api/: Dockerfile  application.py  makefile  pyproject.toml  worker.py
api/alembic/: env.py
api/alembic/versions/: 2026_02_03_1415-db16f43422e1_initial_schema_with_users_agents_.py  2026_02_04_1952-c2a43ab83bc0_add_wallet_address_to_agents_table.py  2026_02_07_1217-f305a3e51bae_drop_stored_holdings_columns_from_agent_.py  2026_02_07_1800-a1b2c3d4e5f6_add_cross_chain_actions_table.py
api/money_hack/: agent_manager.py  app_message_processor.py  constants.py  create_agent_manager.py  cross_chain_yield_manager.py  messages.py  model.py  notification_service.py  util.py
api/money_hack/agent/: __init__.py  chat_bot.py  chat_history_store.py  chat_tool.py  constants.py  gemini_llm.py  runtime_state.py
api/money_hack/api/: authorizer.py  v1_api.py  v1_endpoints.py  v1_resource_builder.py  v1_resources.py
api/money_hack/blockchain_data/: alchemy_client.py  blockchain_data_client.py  blockscout_client.py  findblock_client.py  moralis_client.py  price_intelligence_service.py
api/money_hack/forty_acres/: forty_acres_abis.py  forty_acres_client.py
api/money_hack/morpho/: ltv_manager.py  morpho_abis.py  morpho_client.py  morpho_queries.py  transaction_builder.py
api/money_hack/smart_wallets/: coinbase_bundler.py  coinbase_constants.py  coinbase_smart_wallet.py  model.py
api/scripts/: close_position.py  demo_notifications.py  diagnose_agent_position.py  fix_vault_shares.py  set_ens_constitution.py  telegram_bot_setup_webhook.py
app/: Dockerfile  (+3 more)
(+67 files in other folders)
